added 'jiggly' email
use of  <marquee behavior="alternate"></marquee> to make email link jiggle about

--- a/EcoMaxWebsite/index.html
+++ b/EcoMaxWebsite/index.html
@@ -143,7 +143,7 @@ Space Man !!!!
 <p>No-Hassle, Rolling Contract or Fixed-Term</p>
 <p>Why not Give Us A Try ?</font></p>
 </br></br></br><h1>* call now - 07495 278106 *
-</br>* info@ <a href="mailto:%0D%0A%0D%0A%0D%0Alets10x%40icloud.com">DBS-Cleaning-Services</a>*</h1>
+</br><marquee behavior="alternate">* info@ <a href="mailto:%0D%0A%0D%0A%0D%0Alets10x%40icloud.com">DBS-Cleaning-Services</a>*</marquee></h1>
 </b>
 <div id="wrapper">
 <div id="first">
