article added instead of div for styling of jiggle email

--- a/EcoMaxWebsite/index.html
+++ b/EcoMaxWebsite/index.html
@@ -79,6 +79,15 @@ div {
 }
 
 */
+	
+ article {
+	border-radius: 15px;
+	text-align: center;
+	background-color: #999;
+	font-family: sans-serif;
+	font-size: 45px;
+                        
+	}
 
 #wrapper {
 	width: 750px;
@@ -142,9 +151,9 @@ Space Man !!!!
 <p>Guaranteed</p>
 <p>No-Hassle, Rolling Contract or Fixed-Term</p>
 <p>Why not Give Us A Try ?</font></p>
-</br></br></br><h1>* call now - 07495 278106 *
+</br></br><article></br><h1>* call now - 07495 278106 *
 </br><marquee behavior="alternate">* info@ <a href="mailto:%0D%0A%0D%0A%0D%0Alets10x%40icloud.com">DBS-Cleaning-Services</a>*</marquee></h1>
-</b>
+</b></article>
 <div id="wrapper">
 <div id="first">
 <p><b><font size="4">*</p>
